--- a/static/scss/base/_animations.scss
+++ b/static/scss/base/_animations.scss
@@ -50,3 +50,9 @@
     }
   }
 }
+
+@media #{$breakpoint-xs}, #{$breakpoint-sm} {
+  [data-aos-delay] {
+    transition-delay: 0s !important;
+  }
+}
