--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -462,6 +462,77 @@
 }
 
 // ---------------------------------------------------------------
+// Home you will gain section
+// ---------------------------------------------------------------
+
+.home-you-will-gain{
+    text-align: center;
+    background-color: $gray;
+    padding: 1em 0 2em 0;
+}
+
+.home-gain-heading{
+    margin: 1em 1em 3em 1em;
+    @media  #{$breakpoint-min-md}{
+        margin: 1em 1em 1em 1em;
+    }
+    @media  #{$breakpoint-lg}{
+        margin: 0 1em;
+    }
+
+}
+
+.home-gain-content{
+    width: 80vw;
+    margin: 1em auto;
+    position: relative;
+    @media  #{$breakpoint-sm}{
+        width: 55vw;
+    }
+    @media  #{$breakpoint-min-md}{
+        justify-content: center;
+        display: flex;
+        flex-flow: row wrap;
+        height: auto;
+        margin: 0 auto;
+    }
+}
+
+.home-gain-item{
+    margin: 4em 0;
+    position: relative;
+    @media  #{$breakpoint-min-md}{
+        position: relative;
+        margin: 1em 0;
+        align-self: end;
+        width: 31%!important;
+        padding: 0 .5em;
+        &:nth-of-type(1),
+        &:nth-of-type(2),
+        &:nth-of-type(4),
+        &:nth-of-type(5){
+            &:after{
+                content: "";
+                background-color: #f58c7c;
+                position: absolute;
+                width: 2px;
+                height: 5em;
+                margin: auto;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                display: block;
+            }
+        }
+    }
+    .sect-subtitle{
+        margin: .5em;
+        color: $pink;
+    }
+}
+
+
+// ---------------------------------------------------------------
 // Home quote parallex section
 // ---------------------------------------------------------------
 
