Add contact hero text

--- a/static/scss/pages/_contact.scss
+++ b/static/scss/pages/_contact.scss
@@ -11,6 +11,11 @@
         background-size: cover;
         background-attachment: fixed;
     }
+    .parallax-container{
+        @media #{$breakpoint-min-md}{
+            opacity: .4;
+        }
+    }
 }
 
 .contact-hero-parallax-window{
