--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8477,6 +8477,12 @@ input[type='checkbox'] {
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .contact-hero-container .parallax-container {
+    opacity: .4;
+  }
+}
+
 .contact-hero-parallax-window {
   background: black;
   position: relative;
