--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9264,8 +9264,8 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) {
   .testimonial-author {
-    -ms-grid-columns: auto auto;
-        grid-template-columns: auto auto;
+    -ms-grid-columns: 13em auto;
+        grid-template-columns: 13em auto;
   }
 }
 
