--- a/static/css/main.css
+++ b/static/css/main.css
@@ -794,6 +794,7 @@ html {
 body {
   font-family: "Roboto", serif;
   line-height: 1.5;
+  overscroll-behavior: none;
 }
 
 a:visited, a:hover, a:active, a:focus {
