--- a/static/scss/base/_base.scss
+++ b/static/scss/base/_base.scss
@@ -30,6 +30,7 @@ body{
   // color: white;
   font-family: $font-roboto;
   line-height: 1.5;
+  overscroll-behavior: none;
 }
 
 a:visited, a:hover, a:active, a:focus {
