Begin sticky nav

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -29,7 +29,8 @@
   'components/navbar',
   'components/button',
   'components/preloader',
-  'components/quiz_full';
+  'components/quiz_full',
+  'components/quiz_banner';
 
 // 6. Page-specific styles
 @import
