--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2817,6 +2817,130 @@ input[type='checkbox'] {
   }
 }
 
+.quiz-banner {
+  background-color: blue;
+  padding: 20px;
+  text-align: center;
+  height: 9em;
+}
+
+@media only screen and (min-width: 768px) {
+  .quiz-banner {
+    height: 3em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-banner {
+    height: 2em;
+  }
+}
+
+.toggle-header-fixed {
+  position: fixed !important;
+  top: 0;
+  bottom: 0;
+  z-index: 99;
+  text-align: initial;
+}
+
+@media only screen and (min-width: 768px) {
+  .toggle-header-fixed {
+    background-color: transparent;
+  }
+}
+
+.toggle-header-relative {
+  position: relative;
+  height: 50px;
+  width: 100vw;
+  background-color: #f0f3f3;
+  top: 0;
+  z-index: 99;
+  text-align: initial;
+}
+
+@media only screen and (min-width: 768px) {
+  .toggle-header-relative {
+    background-color: transparent;
+    position: absolute;
+    top: 3em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .toggle-header-relative {
+    top: 3em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .toggle-header-relative .nav-toggle {
+    top: 1.3em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .toggle-header-relative .nav-toggle {
+    top: 1.1em;
+    right: 2em;
+  }
+}
+
+.toggle-wrapper {
+  height: 50px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  .sticky {
+    top: 0;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .sticky .nav-toggle {
+    top: 1.1em;
+  }
+}
+
+.header-name-quiz {
+  font-family: "Roboto", serif;
+  position: relative;
+  top: .6em;
+  left: .5em;
+  color: #3b403f;
+  text-transform: uppercase;
+  line-height: 1.1;
+  letter-spacing: 0.2em;
+  font-size: 1.6em;
+  margin: 0;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .header-name-quiz {
+    margin: 0;
+    left: .6em;
+    top: .5em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .header-name-quiz {
+    display: none;
+  }
+}
+
 .home-hero .home-hero-2 {
   -o-object-position: 50% 50%;
      object-position: 50% 50%;
