--- a/static/scss/components/_quiz_banner.scss
+++ b/static/scss/components/_quiz_banner.scss
@@ -1,11 +1,13 @@
 .quiz-banner{
-    background-color: blue;
+    background-color: rgba(179,222,217,1);
     padding: 20px;
     text-align: center;
-    height: 9em;
+    width: 100%;
     @media #{$breakpoint-min-md}{
-        height: 3em;
+        height: 2em;
         display: flex;
+        // position: fixed;
+        z-index: 999;
     }
     @media #{$breakpoint-xl}{
         height: 2em;
@@ -13,15 +15,9 @@
       
 }
 
-.toggle-header-fixed{
-    position: fixed!important;
-    top: 0;
-    bottom: 0;
-    z-index: 99;
-    text-align: initial;
-    @media #{$breakpoint-min-md}{
-      background-color: transparent;
-    }
+.quiz-banner-btn{
+    width: auto;
+    padding: .1em 1.3em;
 }
 
 .toggle-header-relative{
@@ -59,6 +55,7 @@
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 99;
     @media #{$breakpoint-min-md}{
         top: 0;
     }
@@ -69,11 +66,22 @@
     }
 }
 
+.placeholder{
+    height: 50px;
+    display: none;
+    @media #{$breakpoint-min-md}{
+        display: block;
+       
+    }
+}
+
 .header-name-quiz{
     font-family: $font-roboto;
     position: relative;
-    top: .6em;
-    left: .5em;
+    height: 100%;
+    padding: .5em;
+    // top: .6em;
+    // left: .5em;
     color: rgba(59,64,63,1);
     text-transform: uppercase;
     line-height: 1.1;
@@ -84,8 +92,6 @@
     font-style: normal;
     @media #{$breakpoint-sm}{
         margin: 0; 
-        left: .6em;
-        top: .5em;
     }
     @media #{$breakpoint-min-md}{
         display: none; 
