--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2819,9 +2819,13 @@ input[type='checkbox'] {
 
 .quiz-banner {
   background-color: #b3ded9;
-  padding: 20px;
+  padding: 1em .8em;
   text-align: center;
   width: 100%;
+}
+
+.quiz-banner .normal-text {
+  font-size: 1.1em;
 }
 
 @media only screen and (min-width: 768px) {
