--- a/static/scss/components/_quiz_banner.scss
+++ b/static/scss/components/_quiz_banner.scss
@@ -1,8 +1,11 @@
 .quiz-banner{
     background-color: rgba(179,222,217,1);
-    padding: 20px;
+    padding: 1em .8em;
     text-align: center;
     width: 100%;
+    .normal-text{
+        font-size: 1.1em;
+    }
     @media #{$breakpoint-min-md}{
         height: 2em;
         display: flex;
