--- a/static/scss/pages/_services.scss
+++ b/static/scss/pages/_services.scss
@@ -524,6 +524,9 @@
     margin: 4em 1.5em;
     height: auto;
     padding: 2em 2em;
+    &:nth-child(1){
+        margin: 2em 1.5em;
+    }
     @media #{$breakpoint-sm}{
         height: auto;
         margin: 4em auto;
@@ -533,6 +536,7 @@
         background-color: $gray;
         &:nth-child(1){
             grid-column: 2;
+            margin: 0;
         }
         &:nth-child(2){
             grid-column: 4;
@@ -628,7 +632,7 @@
     }
     .how-title{
         @media #{$breakpoint-md}{
-            margin: .8em 0 .8em 0;
+            margin: .8em 0 1.5em 0;
         
         }
     }
